tests/error/comprehension_errors/illegal_ternary.err
Error: Unsupported (at $FILE:6:17)
  | 
4 | @compile_guppy
5 | def foo(xs: list[int], ys: list[int], b: bool) -> None:
6 |     [x for x in (xs if b else ys)]
  |                  ^^^^^^^^^^^^^^^ This expression is not supported in a list comprehension

Guppy compilation failed due to 1 previous error
